<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:id="@+id/album_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/bottom_margin"
        tools:context=".activities.PhotoDetailFragment">

        <ImageView
            android:id="@+id/id_image"

            android:layout_width="match_parent"
            android:layout_height="@dimen/image_size_large"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/text_margin" />


        <TextView
            android:id="@+id/title"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/title"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/author_id_name"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/author_id"
            android:textIsSelectable="true"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/author_id"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/text_margin"
            android:textIsSelectable="true" />


        <TextView
            android:id="@+id/author_name"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/author"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/author"

            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:textIsSelectable="true" />


        <TextView
            android:id="@+id/url_name"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/link"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/url"

            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/description_name"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/description"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"

            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/publish_date_name"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/publish_date"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/publish_date"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:textIsSelectable="true" />


        <TextView
            android:id="@+id/date_taken_name"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/date_taken"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/date_taken"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:textIsSelectable="true" />


        <TextView
            android:id="@+id/tag_name"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/tags"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/tags"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:textIsSelectable="true" />


    </LinearLayout>
</ScrollView>